# Jozsef_Attila_vedes

./: README.md
Bruno/: bemenet.txt
Bruno/src/bruno/: RoutePainter.java
Gedeon/: pom.xml
Halo/Sudoku/Client/: client.c
Halo/Sudoku/Server/: Server.c  grids.txt
Koppany/: README.md  pom.xml
Koppany/src/koppany/: Koppany.java
Malvin/: README  malvin.cpp
Petra/: CMakeLists.txt  README.md
Prog2/: README.md
Prog2/Bruno/: README.md  pom.xml
Prog2/Gedeon/src/gedeon/: Gedeon.java
Prog2/Koppany/: bemenet.txt
Prog2/Koppany/src/koppany/: RoutePainter.java
Prog2/Malvin/: malvin.cpp
Prog2/Megjelenito/: CMakeLists.txt
bruno/src/bruno/: Bruno.java
gedeon/: README.md
gedeon/src/gedeon/: Gedeon.java
koppany/: ki.txt
megj/: README.md
megj/src/: megjelenito.cpp
petra/src/: petra.cpp
